one more fix for single column spacing

--- a/wp-content/themes/makerfaire/less/panels.less
+++ b/wp-content/themes/makerfaire/less/panels.less
@@ -1106,10 +1106,11 @@
       }
    }
 }
+
 @media screen and (min-width: 768px) {
 	.customPanels > .content-panel {
 		.sub-caption-dark {
-			margin-bottom: -75px;
+			margin-bottom: -60px !important;
 		}
 	}
 }
